--- a/src/Calculator/Views/OperatorsPanel.xaml
+++ b/src/Calculator/Views/OperatorsPanel.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CalculatorApp.OperatorsPanel"
+﻿<UserControl x:Class="CalculatorApp.OperatorsPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:common="using:CalculatorApp.Common"
@@ -7,9 +7,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="using:CalculatorApp"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             UseLayoutRounding="False"
              d:DesignHeight="315"
              d:DesignWidth="235"
+             UseLayoutRounding="False"
              mc:Ignorable="d">
     <Grid>
         <local:CalculatorStandardOperators x:Name="StandardOperators"
